--- a/phase-2/Practice-project-1/src/main/webapp/User.html
+++ b/phase-2/Practice-project-1/src/main/webapp/User.html
@@ -8,7 +8,7 @@
 <h1>Login App using HttpSession</h1>  
 <a href="login.html">Login</a>|  
 <a href="LogoutServlet">Logout</a>|  
-<a href="ProfileServlet">Profile</a>  
+<a href="DashboardServlet">Dashboard</a>  
   
 
 </body>
