--- a/phase-2/Practice-project-1/src/main/webapp/links.html
+++ b/phase-2/Practice-project-1/src/main/webapp/links.html
@@ -7,7 +7,7 @@
 <body>
 	<a href="login.html">Login</a> |
 	<a href="LogoutServlet">Logout</a> |
-	<a href="ProfileServlet">Profile</a>
+	<a href="DashboardServlet">Dashboard</a>
 	<hr>
 </body>
 </html>
